--- a/index.html
+++ b/index.html
@@ -3,27 +3,62 @@
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/all.min.css">
         <link rel="stylesheet" href="css/index.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Righteous&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     </head>
-    <body>
+    <body class="position-relative" >
 
-        <div class="container">
-            <h1>Bookmarker</h1>
-            <h2>Bookmark your favorite sites</h2>
-            <label for="">Site Name</label>
-            <input placeholder="Bookmark Name" type="text">
-            <label for="">Site URL</label>
-            <input placeholder="Website URL" type="text">
-            <button class="btn btn-danger">Submit</button>
-            <table>
-                <thead>
-                    <th>Index</th>
-                    <th>Website Name</th>
-                    <th>Visit</th>
-                    <th>Delete</th>
-                </thead>
-            </table>
-        </div>
-
+        <section >
+            <div id="overlayId" class="  h-100  container-fluid h-100  d-flex justify-content-center align-items-center position-absolute overlay  visually-hidden ">
+                <div class="popup box-conent bg-white p-2 rounded-3 shadow-lg">
+                    <div class="d-flex justify-content-between">
+                        <div class="circle d-flex p-3">
+                            <span class="rounded-circle me-2"></span>
+                            <span class="rounded-circle me-2"></span>
+                            <span class="rounded-circle me-2"></span>
+                        </div>
+                        <button onclick="closePopup()" class= "btn border-0" ><i class="fa-solid fa-xmark fa-2x"></i></button>
+                    </div>
+                    <div class="px-4">
+                        <p class="fw-bold py-2">Site Name or Url is not valid, Please follow the rules below :</p>
+                        <ul class="p-0">
+                            <li class="list-unstyled m-0 text-start"> <i class="fa-regular fa-circle-right py-2"></i><span class="ps-2">Site name must contain at least 3 characters</span></li>
+                            <li class="list-unstyled m-0 text-start"> <i class="fa-regular fa-circle-right py-2"></i><span class="ps-2">Site URL must be a valid one</span></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+    
+            <div class="container p-3 ">
+                <div class="dott1 d-flex justify-content-center"><h1 class="py-5 position-relative">Bookmarker</h1></div>
+                <h2 class="p-4">  <i class="fa-solid fa-bookmark"></i> Bookmark your favorite sites <i class="fa-solid fa-bookmark"></i></h2>
+                <div class="d-flex flex-column p-3">
+                    <label class="text-start py-2" for=""><i class="fa-solid fa-book-bookmark pe-2"></i> Site Name</label>
+                    <input oninput="valid(this.value)" class="form-control" id="siteNameId" placeholder="Bookmark Name" type="text">
+                </div>
+                <div class="d-flex flex-column p-3">
+                    <label class="text-start py-2 " for=""><i class="fa-solid fa-link pe-2"></i> Site URL</label>
+                    <input oninput="validURL(this.value)" class="form-control" id="siteURLId" placeholder="Website URL" type="text">
+                    <div ><button onclick="newSite()" class="btn btn-danger my-4 px-5 ">Submit</button></div>
+                </div >
+                
+                <div class="pt-4 dott2">
+                    <table class=" table text-center ">
+                        <thead class="bg-white">
+                            <th >Index</th>
+                            <th >Website Name</th>
+                            <th >Visit</th>
+                            <th >Delete</th>
+                            <tbody id="tbodyId">
+                            </tbody>
+                </table>
+                </div>
+            </div>
+        </section>
         <script src="js/index.js"></script>
     </body>
 </html>
